Fixed word-wrap.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ License URI: http://www.opensource.org/licenses/gpl-license.php GPL v3.0 (or lat
 /********************************************************************************************************************/
 body {
 	color: #555555;
+	word-wrap: break-word;
 }
 
 h1, h2, h3, h4, h5, h6 {
